[package]
name = "mq-hub"
version = "0.1.0"
authors = ["Alex Sarapulov <1molyee@gmail.com>"]
edition = "2018"
publish = false

[dependencies]
uuid = { path = "../../common/uuid", version = "*", features = ["v1", "v4"]}
url = "*"
timer = { path = "../../common/timer" }
shared = { path = "../../common/shared" }
pool = { path = "../../common/pool" }
aio = { path = "../../common/aio" }
log = "*"
bytes = "*"
futures = { version = "0.3.1", features = ["async-await"] }
